# vitral

./: .gitignore  CMakeLists.txt  README.md  VSDKCompileJava.cmake  build.gradle  clean_all.sh  compile_lib.bat  compile_lib.sh  compile_lib_without_jogl.bat  document.sh  pom.xml  settings.gradle
PARADIGMAS/: cleanall.sh  mapaDeEtapas.vsd
PARADIGMAS/0doc/: TODO.txt  readme.txt  stagesMap.vsd
PARADIGMAS/etapa011_HolaMundoJOGL/: compile.bat  run.bat
PARADIGMAS/etapa033_Camera/: readme.txt  run.bat  run.sh
PARADIGMAS/etapa041_Swing/: compile.bat  compile.sh
PARADIGMAS/etapa090_Raytracing/: Makefile
PARADIGMAS/etapa121_Mesh/: compile.bat  compile.sh  run.bat  run.sh
PARADIGMAS/stage011_HelloWorldJOGL/: compile.sh  run.bat
PARADIGMAS/stage033_Camera/: compile.bat
PARADIGMAS/stage041_CameraSwing/: compile.sh
VITRAL/: cleanall.sh  paquetes_usados_total.txt  testSerialization.java  update_lib.sh
awt/: .gitignore  pom.xml
base/: .gitignore  pom.xml
doc/: ArchitectureAndDesignSpecification.doc  BUGS.txt  TODO.txt  applets_index.html  log.txt  maven.txt  modelDependencies.txt  parametricCubicCurves.mm  polyhedralBoundedSolidImplementationFigures.vsd  polyhedralBoundedSolidImplementationNotes.xls  readme.txt  readme_jogl2.txt  shaderStandards.txt  stagesMap.vsd
jogl/: pom.xml
jogl2/: .gitignore
scripts/: clean_all.sh  document.sh
testsuite/: .gitignore  compile_all.sh  pom.xml  run_all.sh  run_all_mvn.sh
vitral/: clean_all.sh  compile_lib.bat  compile_lib.sh  compile_lib_without_jogl.bat  compile_lib_without_jogl.sh  document.sh
(+2763 files in other folders)
